--- a/integration-app/src/main/resources/application.yml
+++ b/integration-app/src/main/resources/application.yml
@@ -1,4 +1,8 @@
 spring:
+  data:
+    redis:
+      host: localhost
+      port: 6379
   jpa:
     generate-ddl: true
   datasource:
@@ -11,15 +15,20 @@ spring:
       connection-timeout: 10000
 
 app:
+  redis:
+    enabled: true
   integration:
     base-url: http://localhost:8082
   cache:
-    cacheType: inMemory
+    cacheType: redis
     cache-names:
       - databaseEntities
       - databaseEntitiesByName
+      - databaseEntitiesById
     caches:
       databaseEntities:
         expiry: 10s
       databaseEntitiesByName:
+        expiry: 10s
+      databaseEntitiesById:
         expiry: 10s
